# routewise-mcp

./: .dockerignore  .env.example  .npmrc  DEPLOY_CHECKLIST.md  Dockerfile  README.md  glama.json  llms-install.md  package-lock.json  package.json  server.json  tsconfig.json  wrangler.toml
.github/workflows/: publish.yml
integrations/haystack-whichmodel/: README.md  pyproject.toml
integrations/haystack-whichmodel/examples/: basic_recommendation.py
integrations/haystack-whichmodel/src/haystack_integrations/components/routers/whichmodel/: __init__.py  router.py
integrations/haystack-whichmodel/tests/: test_router.py
migrations/: 001_api_keys.sql  008_telegram_bot.sql
src/: dashboard.ts  index.ts  landing.ts  observability.ts  server.ts  worker.ts
src/db/: benchmarks.ts  client.ts  models.ts  price-history.ts  schema.sql
src/engine/: recommendation.ts  task-profiles.ts  types.ts  value-score.ts
src/middleware/: auth.ts  rate-limit.ts
src/pipeline/: benchmarks.ts  capability-smoke-tests.ts  known-models.ts  new-model-scan.ts  openrouter.ts  provider-direct.ts  run-pipeline.ts  seed.ts  transform.ts  update.ts  validate-prices.ts
src/routes/: auth.ts  billing.ts  keys.ts
src/telegram/: commands.ts  db.ts  index.ts  keyboards.ts  notifications.ts  types.ts  webhook.ts
src/tools/: check-price-changes.ts  compare-models.ts  estimate-cost.ts  find-cheapest-capable.ts  get-pricing.ts  recommend-model.ts
tests/fixtures/: sample-models.ts
tests/unit/: recommendation.test.ts  task-profiles.test.ts  transform.test.ts  value-score.test.ts
